--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,56 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.nutz</groupId>
-  <artifactId>nutzmore</artifactId>
-  <version>1.b.52-SNAPSHOT</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.nutz</groupId>
-  		<artifactId>nutz</artifactId>
-  		<version>1.b.51</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.nutz</groupId>
+	<artifactId>nutzmore</artifactId>
+	<version>1.b.52-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz</artifactId>
+			<version>1.b.51</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkMode>once</forkMode>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<packaging>pom</packaging>
+	<modules>
+		<module>nutz-spring</module>
+		<module>nutz-jcache</module>
+		<module>nutz-jsr303</module>
+		<module>nutz-integration-quartz</module>
+		<module>nutz-integration-dwr</module>
+		<module>nutz-integration-jsf</module>
+		<module>nutz-integration-shiro</module>
+		<module>nutz-plugins-validation</module>
+		<module>nutz-plugins-views</module>
+	</modules>
 </project>
