add: XmlEntityMaker 基于XML配置Entity

--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,6 @@
 		<module>nutz-integration-shiro</module>
 		<module>nutz-plugins-validation</module>
 		<module>nutz-plugins-views</module>
+		<module>nutz-plugins-xmlentitymaker</module>
 	</modules>
 </project>
