--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,6 @@
 		<module>nutz-plugins-validation</module>
 		<module>nutz-plugins-views</module>
 		<module>nutz-plugins-xmlentitymaker</module>
+		<module>nutz-plugins-iocloader</module>
 	</modules>
 </project>
