--- a/nutz-integration-shiro/pom.xml
+++ b/nutz-integration-shiro/pom.xml
@@ -10,7 +10,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-core</artifactId>
+			<artifactId>shiro-web</artifactId>
 			<version>1.2.3</version>
 		</dependency>
 
@@ -19,6 +19,16 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.4</version>
 		</dependency>
 	</dependencies>
 </project>
