--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -68,7 +68,13 @@
 			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.28</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -99,4 +105,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.b.52.preview2</version>
 </project>
