--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -7,6 +7,7 @@
 		<version>1.b.52</version>
 	</parent>
 	<artifactId>nutz-plugins-daocache</artifactId>
+	<version>1.b.52.preview3</version>
 	<description>Nutz Dao Cache</description>
 
 	<url>http://nutzam.com</url>
@@ -75,6 +76,12 @@
 			<version>5.1.28</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -105,5 +112,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.b.52.preview2</version>
 </project>
