--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
 	<version>1.b.52</version>
-	<name>nutzmore</name>	
+	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
 	<url>http://nutzam.com</url>
@@ -96,4 +96,15 @@
 		<module>nutz-integration-jsch</module>
 		<module>nutz-plugins-daocache</module>
 	</modules>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://10.0.1.106:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://10.0.1.106:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
