--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -82,6 +82,12 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.7.3</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	
 	<build>
