add: sqltpl Sql模板, 当前添加了beetl实现

--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,7 @@
 		<module>nutz-integration-jsch</module>
 		<module>nutz-plugins-daocache</module>
 		<module>nutz-plugins-protobuf</module>
+		
+		<module>nutz-plugins-sqltpl</module>
 	</modules>
 </project>
