--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -16,6 +16,7 @@
   		<groupId>org.beetl</groupId>
   		<artifactId>beetl-core</artifactId>
   		<version>2.2.3</version>
+  		<optional>true</optional>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -27,6 +28,13 @@
   		<groupId>org.apache.velocity</groupId>
   		<artifactId>velocity</artifactId>
   		<version>1.6.4</version>
+  		<optional>true</optional>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.freemarker</groupId>
+  		<artifactId>freemarker</artifactId>
+  		<version>2.3.23</version>
+  		<optional>true</optional>
   	</dependency>
   </dependencies>
 </project>
