--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -36,5 +36,11 @@
   		<version>2.3.23</version>
   		<optional>true</optional>
   	</dependency>
+  	<dependency>
+  		<groupId>com.github.subchen</groupId>
+  		<artifactId>jetbrick-template</artifactId>
+  		<version>2.0.11</version>
+  		<optional>true</optional>
+  	</dependency>
   </dependencies>
 </project>
