--- a/nutz-plugins-secken/pom.xml
+++ b/nutz-plugins-secken/pom.xml
@@ -56,4 +56,5 @@
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 	</distributionManagement>
+	<version>1.b.52.r2</version>
 </project>
