add: struts的集成插件,参考实现

--- a/pom.xml
+++ b/pom.xml
@@ -100,5 +100,6 @@
 		<module>nutz-plugins-sqltpl</module>
     
     <module>nutz-plugins-secken</module>
+    <module>nutz-integration-struts2</module>
 	</modules>
 </project>
