--- a/nutz-integration-struts2/pom.xml
+++ b/nutz-integration-struts2/pom.xml
@@ -11,6 +11,13 @@
   		<groupId>org.apache.struts</groupId>
   		<artifactId>struts2-core</artifactId>
   		<version>2.1.8.1</version>
+  		<scope>provided</scope>
+  		<exclusions>
+  			<exclusion>
+  				<artifactId>spring-test</artifactId>
+  				<groupId>org.springframework</groupId>
+  			</exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>org.nutz</groupId>
