--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
 	<version>1.b.52</version>
-	<name>nutzmore</name>	
+	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
 	<url>http://nutzam.com</url>
@@ -47,8 +48,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.b.52</version>
-			<scope>compile</scope>
+			<version>1.b.53</version>
 		</dependency>
 	</dependencies>
 
@@ -96,11 +96,10 @@
 		<module>nutz-integration-jsch</module>
 		<module>nutz-plugins-daocache</module>
 		<module>nutz-plugins-protobuf</module>
-		
 		<module>nutz-plugins-sqltpl</module>
-    
-    <module>nutz-plugins-secken</module>
-    <module>nutz-integration-struts2</module>
-    <module>nutz-integration-zbus</module>
+		<module>nutz-plugins-secken</module>
+		<module>nutz-integration-struts2</module>
+		<module>nutz-integration-zbus</module>
+		<module>nutz-integration-hessian</module>
 	</modules>
 </project>
