添加 配置文件 加载器

--- a/nutz-plugins-views/src/main/resources/org/nutz/plugins/view/freemarker/freemarker.properties
+++ b/nutz-plugins-views/src/main/resources/org/nutz/plugins/view/freemarker/freemarker.properties
@@ -10,4 +10,4 @@ date_format=yyyy-MM-dd
 time_format=HH:mm:ss
 number_format=0.######
 whitespace_stripping=true
-auto_import=/ftl/pony/index.ftl as p,/ftl/spring.ftl as s
+#auto_import=/ftl/pony/index.ftl as p,/ftl/spring.ftl as s
