--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
-	<version>1.b.52</version>
+	<version>1.b.53</version>
 	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
@@ -47,8 +47,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.b.52</version>
-			<scope>compile</scope>
+			<version>1.b.53</version>
 		</dependency>
 	</dependencies>
 
@@ -59,8 +58,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -95,16 +94,12 @@
 		<module>nutz-plugins-iocloader</module>
 		<module>nutz-integration-jsch</module>
 		<module>nutz-plugins-daocache</module>
+		<module>nutz-plugins-protobuf</module>
+		<module>nutz-plugins-sqltpl</module>
+		<module>nutz-plugins-secken</module>
+		<module>nutz-integration-struts2</module>
+		<module>nutz-integration-zbus</module>
+		<module>nutz-integration-hessian</module>
+		<module>nutzmore-aggregate</module>
 	</modules>
-
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<url>http://10.0.1.106:8081/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<url>http://10.0.1.106:8081/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
