--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.53</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-daocache</artifactId>
 	<description>Nutz Dao Cache</description>
@@ -111,5 +111,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.b.53.r2</version>
+	<version>1.r.55-SNAPSHOT</version>
 </project>
