--- a/nutz-plugins-oauth2-server/src/main/webapp/WEB-INF/web.xml
+++ b/nutz-plugins-oauth2-server/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 		<filter-class>org.nutz.mvc.NutFilter</filter-class>
 		<init-param>
 			<param-name>modules</param-name>
-			<param-value>org.nutz.plugins.oauth2.MainModule</param-value>
+			<param-value>org.nutz.plugins.oauth2.server.MainModule</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
