--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -45,12 +45,12 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.b.52</version>
+			<version>1.r.54</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>2.2.6</version>
+			<version>2.2.12</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
