先不报 warning 再说

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-/target/
-.classpath
-.settings
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+#workspace Files
 .project
+target/
+.settings/
+.classpath/
+.project/
