--- a/nutz-integration-hessian/pom.xml
+++ b/nutz-integration-hessian/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.53</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-hessian</artifactId>
 	<properties>
@@ -15,11 +15,6 @@
 			<groupId>com.caucho</groupId>
 			<artifactId>hessian</artifactId>
 			<version>4.0.38</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nutz</groupId>
-			<artifactId>nutz</artifactId>
-			<version>1.b.53</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
