--- a/nutz-integration-jsf/pom.xml
+++ b/nutz-integration-jsf/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.52</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-jsf</artifactId>
 	<properties>
