--- a/nutz-integration-quartz/pom.xml
+++ b/nutz-integration-quartz/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.52</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-quartz</artifactId>
 	<properties>
@@ -45,5 +45,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.b.53.r3</version>
 </project>
