--- a/nutz-integration-shiro/pom.xml
+++ b/nutz-integration-shiro/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.52</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-shiro</artifactId>
 	<name>nutz-integration-shiro</name>	
@@ -102,5 +102,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.b.53.r3</version>
 </project>
