--- a/nutz-integration-zbus/pom.xml
+++ b/nutz-integration-zbus/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.b.53</version>
+		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-zbus</artifactId>
 	<dependencies>
@@ -72,5 +72,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.b.53.r2</version>
 </project>
