--- a/pom.xml
+++ b/pom.xml
@@ -103,4 +103,7 @@
 		<module>nutz-integration-hessian</module>
 		<module>nutzmore-aggregate</module>
 	</modules>
+	<properties>
+		<nutz.version>1.r.55-SNAPSHOT</nutz.version>
+	</properties>
 </project>
