--- a/nutz-plugins-multiview/pom.xml
+++ b/nutz-plugins-multiview/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nutz</groupId>
@@ -29,7 +28,7 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.20</version>
+			<version>2.3.23</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -46,20 +45,23 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.beetl</groupId>
-			<artifactId>beetl-core</artifactId>
-			<version>2.2.5</version>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>2.2.14</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.github.subchen</groupId>
-		    <artifactId>jetbrick-template</artifactId>
-		    <version>2.1.0</version>
+			<groupId>com.github.subchen</groupId>
+			<artifactId>jetbrick-template</artifactId>
+			<version>2.1.2</version>
 		</dependency>
+
 		<dependency>
-		    <groupId>com.github.subchen</groupId>
-		    <artifactId>jetbrick-template-web</artifactId>
-		    <version>2.1.0</version>
+			<groupId>com.github.subchen</groupId>
+			<artifactId>jetbrick-template-web</artifactId>
+			<version>2.1.2</version>
 		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
