--- a/nutz-integration-struts2/pom.xml
+++ b/nutz-integration-struts2/pom.xml
@@ -11,13 +11,19 @@
   		<groupId>org.apache.struts</groupId>
   		<artifactId>struts2-core</artifactId>
   		<version>2.1.8.1</version>
-  		<scope>provided</scope>
   		<exclusions>
   			<exclusion>
   				<artifactId>spring-test</artifactId>
   				<groupId>org.springframework</groupId>
   			</exclusion>
   		</exclusions>
+  		<scope>provided</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>javax.servlet-api</artifactId>
+  		<scope>provided</scope>
+  		<version>3.1.0</version>
   	</dependency>
   </dependencies>
 </project>
