--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 language: java
-script: mvn -Dmaven.test.skip=true clean source:jar deploy --settings mvn_settings.xml
+script: mvn -Dmaven.test.skip=true clean source:jar deploy --settings mvn_settings.xml --fail-at-end
 jdk:
   - openjdk7
 # whitelist
