--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.r.55-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-sqltpl</artifactId>
-	<version>1.b.53.r2</version>
+	<version>1.r.56-SNAPSHOT</version>
 	<description>
   	SqlTemplate for Nutz
   </description>
