--- a/nutz-plugins-views/pom.xml
+++ b/nutz-plugins-views/pom.xml
@@ -103,7 +103,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.r.54.r2</version>
+	<version>1.r.56-SNAPSHOT</version>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-snapshots</id>
