--- a/nutz-plugins-jsonrpc/pom.xml
+++ b/nutz-plugins-jsonrpc/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.nutz</groupId>
-    <artifactId>nutzmore</artifactId>
-    <version>1.r.56-SNAPSHOT</version>
-  </parent>
-  <artifactId>nutz-plugins-jsonrpc</artifactId>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.nutz</groupId>
+		<artifactId>nutzmore</artifactId>
+		<version>1.r.56</version>
+	</parent>
+	<artifactId>nutz-plugins-jsonrpc</artifactId>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -36,7 +37,7 @@
 		<developerConnection>scm:git:git://github.com/nutzam/nutzmore.git</developerConnection>
 		<url>git://github.com/nutzam/nutzmore.git</url>
 	</scm>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-snapshots</id>
