--- a/nutz-plugins-multiview/pom.xml
+++ b/nutz-plugins-multiview/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.56-SNAPSHOT</version>
+		<version>1.r.56</version>
 	</parent>
 	<artifactId>nutz-plugins-multiview</artifactId>
 	<description>Nutz More multiView</description>
@@ -21,8 +21,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>2.2.14</version>
+			<version>2.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.subchen</groupId>
