--- a/nutz-plugins-protobuf/pom.xml
+++ b/nutz-plugins-protobuf/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.56-SNAPSHOT</version>
+		<version>1.r.56</version>
 	</parent>
 	<artifactId>nutz-plugins-protobuf</artifactId>
 	<name>nutz-plugins-protobuf</name>
