--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -4,10 +4,9 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.56-SNAPSHOT</version>
+		<version>1.r.56</version>
 	</parent>
 	<artifactId>nutz-plugins-sqltpl</artifactId>
-	<version>1.r.56-SNAPSHOT</version>
 	<description>
   	SqlTemplate for Nutz
   </description>
@@ -50,7 +49,7 @@
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>2.2.12</version>
+			<version>2.2.14</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
