--- a/nutz-plugins-iocloader/pom.xml
+++ b/nutz-plugins-iocloader/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.56</version>
+		<version>1.r.57-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-iocloader</artifactId>
 	<url>http://nutzam.com</url>
