update: nutz-plugins-qrcode没配<distributionManagement>
Signed-off-by: wendal chen <wendal1985@gmail.com>

--- a/nutz-plugins-qrcode/pom.xml
+++ b/nutz-plugins-qrcode/pom.xml
@@ -66,6 +66,7 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -85,4 +86,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-snapshots</id>
+			<name>Sonatype Nexus snapshot repository</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+
+		<repository>
+			<id>sonatype-release-staging</id>
+			<name>Sonatype Nexus release repository</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
+	</distributionManagement>
 </project>
