add: daocache支持以DaoInterceptor的方式使用.
fixed https://github.com/nutzam/nutz/issues/1137

--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -81,6 +81,11 @@
 			<version>2.7.3</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz</artifactId>
+			<version>1.r.58-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
